--- a/less/banner.less
+++ b/less/banner.less
@@ -93,13 +93,19 @@ a {
 			}
 		}
 
+		&-nemtsov {
+			width: 100%;
+		}
+
 		&-value {
 			display: block;
+			max-width: 90%;
+			margin: 0 auto;
 
 			font-size: @fontLarge;
 			font-weight: bold;
 			text-shadow: 0 0 15px #555;
-			white-space: nowrap;
+			white-space: normal;
 
 			transition: all 0.5s;
 
@@ -119,6 +125,8 @@ a {
 			text-align: center;
 			text-shadow: 0 0 3px #666;
 			text-decoration: none;
+
+			font-size: 30px;
 		}
 	}
 
