--- a/less/banner.less
+++ b/less/banner.less
@@ -18,6 +18,8 @@ html, body {
 }
 
 body {
+	box-sizing: border-box;
+	border: 5px solid #666;
 	font: @fontNormal "Play", sans-serif;
 	background: @backgroundColor;
 	color: @textColor;
