--- a/views/footer.dust
+++ b/views/footer.dust
@@ -1,9 +1,9 @@
 <div class="footer">
-	<div>
+	{!<div>
 		<a class="footer-link" href="https://www.facebook.com/events/1601494796751001/">
 			Я тоже пойду
 		</a>
-	</div>
+	</div>!}
 	<div>
 		<script type="text/javascript" src="//x.pluso.ru/pluso-x.js">(function() {
 			if (window.pluso) {return};
