--- a/views/meta.dust
+++ b/views/meta.dust
@@ -1,14 +1,14 @@
-<meta name="Description" content="Весна скоро!">
-<meta name="Keywords" content="скоро, весна, vesna, spring, навальный, navalny, 1 марта, 1 march, 1.3.15, 1.3.15, шествие, манежка, россия, russia, manezhka, москва">
-<meta content="Весна скоро!" property="og:site_name">
-<meta content="Весна скоро!" name="og:title">
+<meta name="Description" content="Убийца Бориса Немцова до сих пор не найден.">
+<meta name="Keywords" content="немцов, убийство, борис, nemtsov, весна, vesna, spring, навальный, navalny, 1 марта, 1 march, 1.3.15, 1.3.15, шествие, манежка, россия, russia, manezhka, москва">
+<meta content="Убийца Бориса Немцова до сих пор не найден." property="og:site_name">
+<meta content="Убийца Бориса Немцова до сих пор не найден." name="og:title">
 <meta content="https://www.zenvesna.tk/i/share.jpg" property="og:image">
 <meta content="website" property="og:type">
 <meta content="https://www.zenvesna.tk" property="og:url">
-<meta content="Жизнь слишком коротка, чтобы всё время смотреть в стол." name="og:description">
+<meta content="Убийца Бориса Немцова до сих пор не найден." name="og:description">
 <meta content="summary_large_image" name="twitter:card">
 <meta content="@the_outreach" name="twitter:creator">
-<meta content="Весна скоро!" name="twitter:title">
-<meta content="Жизнь слишком коротка, чтобы всё время смотреть в стол." name="twitter:description">
+<meta content="Убийца Бориса Немцова до сих пор не найден." name="twitter:title">
+<meta content="Убийца Бориса Немцова до сих пор не найден." name="twitter:description">
 <meta content="https://www.zenvesna.tk/i/share.jpg" name="twitter:image:src">
 <meta content="www.zenvesna.tk" name="twitter:domain">
