update meta & sharing

--- a/views/footer.dust
+++ b/views/footer.dust
@@ -19,7 +19,7 @@
 			data-title="Убийца Бориса Немцова до сих пор не найден."
 			data-description="%D0%96%D0%B8%D0%B7%D0%BD%D1%8C%20%D1%81%D0%BB%D0%B8%D1%88%D0%BA%D0%BE%D0%BC%20%D0%BA%D0%BE%D1%80%D0%BE%D1%82%D0%BA%D0%B0%2C%20%D1%87%D1%82%D0%BE%D0%B1%D1%8B%20%D0%B2%D1%81%D1%91%20%D0%B2%D1%80%D0%B5%D0%BC%D1%8F%20%D1%81%D0%BC%D0%BE%D1%82%D1%80%D0%B5%D1%82%D1%8C%20%D0%B2%20%D1%81%D1%82%D0%BE%D0%BB"
 			data-url="https%3A%2F%2Fwww.zenvesna.tk"
-			data-image="https%3A%2F%2Fwww.zenvesna.me%2Fi%2Fshare.jpg">
+			data-image="https%3A%2F%2Fwww.zenvesna.me%2Fi%2Fshare_nemtsov.jpg">
 		</div>
 	</div>
 	<div class="copyleft">
