--- a/views/meta.dust
+++ b/views/meta.dust
@@ -2,7 +2,7 @@
 <meta name="Keywords" content="немцов, убийство, борис, nemtsov, весна, vesna, spring, навальный, navalny, 1 марта, 1 march, 1.3.15, 1.3.15, шествие, манежка, россия, russia, manezhka, москва">
 <meta content="Убийца Бориса Немцова до сих пор не найден." property="og:site_name">
 <meta content="Убийца Бориса Немцова до сих пор не найден." name="og:title">
-<meta content="https://www.zenvesna.tk/i/share.jpg" property="og:image">
+<meta content="https://www.zenvesna.tk/i/share_nemtsov.jpg" property="og:image">
 <meta content="website" property="og:type">
 <meta content="https://www.zenvesna.tk" property="og:url">
 <meta content="Убийца Бориса Немцова до сих пор не найден." name="og:description">
@@ -10,5 +10,5 @@
 <meta content="@the_outreach" name="twitter:creator">
 <meta content="Убийца Бориса Немцова до сих пор не найден." name="twitter:title">
 <meta content="Убийца Бориса Немцова до сих пор не найден." name="twitter:description">
-<meta content="https://www.zenvesna.tk/i/share.jpg" name="twitter:image:src">
+<meta content="https://www.zenvesna.tk/i/share_nemtsov.jpg" name="twitter:image:src">
 <meta content="www.zenvesna.tk" name="twitter:domain">
