--- a/views/layout.dust
+++ b/views/layout.dust
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Play:400,700|Open+Sans+Condensed:300&subset=latin,cyrillic" />
 	<link rel="stylesheet" href="/css/style.css?v=vesna.12" />
 	<script type="text/javascript" src="//yastatic.net/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.min.js"></script>
 	<script type="text/javascript" src="/js/zen.js?v=vesna.12"></script>
 </head>
 <body>
